Fixes #1075: Fix the scrollbar in IE. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1274 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -360,7 +360,7 @@ div {
 .inner-scrollbar {
   overflow-y: auto; 
   width: 98%; 
-  height: 250px;
+  height: 200px;
 }
 
 .footer-container {
